Create DB Script

--- a/NRGTest/NRGTest.csproj
+++ b/NRGTest/NRGTest.csproj
@@ -117,6 +117,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="CreateDB.txt" />
     <Content Include="Global.asax" />
     <Content Include="Register.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
